Fixed bar highlight bugs - removed numerous mixed spaces and tabs - removed scale on highlight because it was blanking out width and length on first bar series - changed onClick to use barSeries not bars selection - updated spacing groupscale to space out grouped barcharts better

--- a/css/widgets.css
+++ b/css/widgets.css
@@ -730,14 +730,14 @@ svg g .stroke11 {
 svg g.brixBarChart .bar,
 svg g.widgetLegend rect,
 svg g.bricPieChart path {
-  opacity: 0.7; 
+  opacity: 0.8; 
   }
 
 svg g.brixBarChart .lit .bar,
 svg g.widgetLegend .lit rect,
 svg g.bricPieChart path .lit  {
   opacity: 1;
-  stroke-width: 2;
+  stroke-width: 1;
   stroke: #999;
   }
 
